# 24a-emb-aps-1-rickrock

main/: CMakeLists.txt  main.c  testedisplay.c
main/helpers/: config.c  config.h  display.c  display.h  flash.c  flash.h  game.c  game.h  lcd.c  lcd.h  sound.c  sound.h
